generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_existential_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const val: * = 42;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier val)
      (type_annotation
        (existential_type)
      )
      (number)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "val",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "val",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 10,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
