generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_identifier.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
identifier

AST:
(program
  (expression_statement
    (identifier identifier)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
